  The feature id of the created feature is returned by updating the id of the
  passed in feature instead of through the return value of the method as
  was the case with the old SetFeature() method in MITAB 1.x.

- Added Visual Studio Project files in contrib/vcproj, contributed by 
  Tony Wells (bug 1877)

- Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes

Version 1.7.0-beta1 (2007-02-29)
--------------------------------

- Added support for V8.x large object types: large REGION, PLINE MULTIPLE,
  MULTIPOINT and COLLECTION (bug 1496)

- Added support for v9.x Time and DateTime fields (based on patch from
  AJD, bug 1754)

- Added bounds for Peruvian coordinate systems PSAD56 in mitab_bounds.cpp
  (came with patch from AJD sent for bug 1754)

- Use %.15g instead of %.16g as number precision in .MIF output

- Fixed the internal compressed coordinate range detection test to prevent
  possible overflow of the compressed integer coordinate values leading
  to some coordinate errors in very rare cases while writing to TAB (bug 1854) 


Version 1.6.4 (2007-12-10)
--------------------------

- Upgrade of OGR and CPL libs to the version from GDAL/OGR 1.4.3

- Fixed leak of SRS in OGRGeometry (bug 1816)

- Fix asDatumInfoList[] and asSpheroidInfoList[] defns/refs (bug 1826)

- Added reporting access mode to error message in TABINDFile::Open()
  (GDAL changeset r12460, ticket 1620)

- Fixed leaks in ITABFeature???::Set???FromStyleString() (GDAL ticket 1696)


Version 1.6.3 (2007-10-12)
--------------------------

- Remove static variables that interfere with reentrancy. 
  http://trac.osgeo.org/gdal/ticket/1883


Version 1.6.3-beta2 (2007-09-18)
--------------------------------

- Fixed another issue related to splitting of object blocks with the 
  optimized spatial index. The compressed coordinate origin values were
  not initialized properly before being written (bug 1732)


Version 1.6.3-beta1 (2007-09-14)
--------------------------------
