@@ -41,6 +41,10 @@ Version 2.0-dev (CVS)
 
 - Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes
 
+- Fixed problem with corrupt pointer if file not found (bug 1899)
+
+- Fixed tabdump build problem if DEBUG option not provided (bug 1898)
+
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
 
@@ -902,5 +906,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.210 2008-04-22 19:24:51 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.211 2008-06-13 18:39:21 aboudreault Exp $
 ------------
